--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -10,9 +10,14 @@ jobs:
       - run: pwd
       - run: ls -l
       - run: ls -l blockchain-processor
-      - run: cat blockchain-processor/package.json # This will print the contents of the file, or error if it does not exist.
+      - run: cat blockchain-processor/package.json
       - run: npm test --prefix blockchain-processor
-      - run: npm test --prefix blockchain-processor
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9' # Or the version of python your project uses
+      - name: Install pytest
+        run: pip install pytest
       - run: pytest iot-simulator/tests/
 
   deploy:
