--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -20,6 +20,8 @@ jobs:
         run: python -m venv venv
       - name: Activate Virtual Environment
         run: source venv/bin/activate
+      - name: Check Virtual Environment
+        run: echo $VIRTUAL_ENV
       - name: Check pip version
         run: pip --version
       - name: Install pytest
@@ -32,6 +34,8 @@ jobs:
         run: ls -l venv/bin
       - name: Find pytest
         run: which pytest
+      - name: List packages in venv
+        run: ./venv/bin/pip list
       - name: Run pytest with explicit python path
         run: ./venv/bin/python -m pytest iot-simulator/tests/
   deploy:
