--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -16,6 +16,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      - name: Cache Virtual Environment
+        uses: actions/cache@v3
+        with:
+          path: ./venv
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements.txt') }} # if you have a requirements.txt file, use it.
       - name: Create Virtual Environment
         run: python -m venv venv
       - name: Activate Virtual Environment
@@ -24,8 +29,10 @@ jobs:
         run: echo $VIRTUAL_ENV
       - name: Check pip version
         run: pip --version
-      - name: Install pytest
-        run: pip install pytest
+      - name: Upgrade pip
+        run: ./venv/bin/pip install --upgrade pip
+      - name: Install pytest verbose
+        run: ./venv/bin/pip install -v pytest
       - name: Check pytest version
         run: pytest --version
       - name: Check PATH
